Add support for starting the HDFS Secondary NameNode